--- a/lib/lang/fr.json
+++ b/lib/lang/fr.json
@@ -2,5 +2,9 @@
     "app_name": "Stop Violence",
     "appBar1" : "Report Incident blah blah blah 1/2",
     "picture_of_the_incident" : "PICTURE OF THE fndb fb *",
-    "address" :"ADDRESSion *"
+    "address" :"ADDRESSion *",
+    "NoImages": "Veuillez télécharger une image",
+    "NoLocation": "Veuillez ajouter votre emplacement",
+    "NoComment": "Veuillez ajouter un commentaire",
+    "NoIncidentType": "Veuillez sélectionner le type d'incident"
 }
