--- a/lib/lang/fr.json
+++ b/lib/lang/fr.json
@@ -21,7 +21,7 @@
     "name_hint" : "Nom * ",
     "email_hint" : "Email * ",
     "phone_hint" : "Mobile ",
-    "stay_anonymous_warning" : "Thank you ! Your incident has been sent to the competent service. An E-mail containing the incident information has been sent to your address",
+    "stay_anonymous_warning" : "You are Anonymous .",
     "loading" : "Loading...",
 
     "take_a_picture":"Prendre une photo",
@@ -31,6 +31,7 @@
     "confirmation":"Confirmation",
     "confirmation_text":"Merci, votre témoignage va être transférer au service compétent. Vous recevrez un email de confirmation prochainement",
     "ok":"Ok",
+    "Register_Complaint": "Votre plainte a été enregistrée .....",
 
 
 
